<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.artoo</groupId>
  <artifactId>io.artoo</artifactId>
  <packaging>pom</packaging>
  <version>1.0.0-SNAPSHOT</version>
  <modules>
    <module>io.artoo.fxcalibur</module>
    <module>io.artoo.lance</module>
    <module>io.artoo.frost</module>
    <module>io.artoo.honolulu</module>
    <module>io.artoo.bom</module>
    <module>io.artoo.camelot</module>
    <module>io.artoo.parry</module>
    <module>io.artoo.ladylake</module>
    <module>io.artoo.stone</module>
  </modules>

  <name>Artoo</name>

  <properties>
    <artoo.version>0.0.1-alpha</artoo.version>

    <encoding>UTF-8</encoding>
    <java.version>16</java.version>
    <java.release>16</java.release>
    <maven.min.version>3.6.0</maven.min.version>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>

    <mainClass>NONE</mainClass>

    <!-- compile deps -->
    <annotations.version>20.1.0</annotations.version>
    <asm.version>9.2</asm.version>

    <!-- deps -->
    <vertx.version>4.1.1</vertx.version>
    <log4j.version>2.14.0</log4j.version>
    <logback.version>1.3.0-alpha5</logback.version>

    <!-- test deps -->
    <assertj.version>3.19.0</assertj.version>
    <awaitility.version>4.0.3</awaitility.version>
    <junit.version>5.8.0-M1</junit.version>
    <mockito.version>3.8.0</mockito.version>

    <!-- maven plugs -->
    <plugin-clean.version>3.1.0</plugin-clean.version>
    <plugin-compiler.version>3.8.1</plugin-compiler.version>
    <plugin-deploy.version>3.0.0-M1</plugin-deploy.version>
    <plugin-enforcer.version>3.0.0-M3</plugin-enforcer.version>
    <plugin-github-release.version>1.4.0</plugin-github-release.version>
    <plugin-install.version>3.0.0-M1</plugin-install.version>
    <plugin-jar.version>3.2.0</plugin-jar.version>
    <plugin-pmd.version>3.13.0</plugin-pmd.version>
    <plugin-release.version>3.0.0-M1</plugin-release.version>
    <plugin-resources.version>3.2.0</plugin-resources.version>
    <plugin-site.version>3.9.1</plugin-site.version>
    <plugin-surefire.version>3.0.0-M5</plugin-surefire.version>
    <plugin-versions.version>2.8.1</plugin-versions.version>
    <plugin-source.version>3.2.1</plugin-source.version>
    <plugin-assembly.version>3.3.0</plugin-assembly.version>
    <plugin-exec.version>3.0.0</plugin-exec.version>
    <plugin-frontend.version>1.11.2</plugin-frontend.version>
    <node.version>14.16.0</node.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- compile deps -->
      <dependency>
        <groupId>org.jetbrains</groupId>
        <artifactId>annotations</artifactId>
        <version>${annotations.version}</version>
        <scope>compile</scope>
        <optional>true</optional>
      </dependency>

      <dependency>
        <groupId>io.vertx</groupId>
        <artifactId>vertx-stack-depchain</artifactId>
        <version>${vertx.version}</version>
        <type>pom</type>
        <optional>true</optional>
      </dependency>

      <dependency>
        <groupId>ch.qos.logback</groupId>
        <artifactId>logback-classic</artifactId>
        <version>${logback.version}</version>
      </dependency>

      <!-- tests -->
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-engine</artifactId>
        <version>${junit.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-params</artifactId>
        <version>${junit.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>${assertj.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-core</artifactId>
        <version>${mockito.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.awaitility</groupId>
        <artifactId>awaitility</artifactId>
        <version>${awaitility.version}</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
    </dependency>

    <!-- tests -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
    </dependency>
    <dependency>
      <groupId>org.awaitility</groupId>
      <artifactId>awaitility</artifactId>
    </dependency>
  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-enforcer-plugin</artifactId>
          <version>${plugin-enforcer.version}</version>
          <executions>
            <execution>
              <id>enforce-versions</id>
              <goals>
                <goal>enforce</goal>
              </goals>
              <configuration>
                <rules>
                  <requireMavenVersion>
                    <version>${maven.min.version}</version>
                  </requireMavenVersion>
                </rules>
              </configuration>
            </execution>
          </executions>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${plugin-compiler.version}</version>
           <configuration>
            <compilerArgs>
              <arg>--enable-preview</arg>
<!--              <arg>-Xlint:preview</arg>-->
            </compilerArgs>
          </configuration>
          <dependencies>
            <dependency>
              <groupId>org.ow2.asm</groupId>
              <artifactId>asm</artifactId>
              <version>${asm.version}</version>
            </dependency>
          </dependencies>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${plugin-surefire.version}</version>
          <configuration>
            <argLine>--enable-preview</argLine>
          </configuration>
          <dependencies>
            <dependency>
              <groupId>org.ow2.asm</groupId>
              <artifactId>asm</artifactId>
              <version>${asm.version}</version>
            </dependency>
          </dependencies>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>${plugin-jar.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>${plugin-source.version}</version>
          <executions>
            <execution>
              <id>attach-sources</id>
              <goals>
                <goal>jar</goal>
              </goals>
            </execution>
          </executions>
        </plugin>

        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>versions-maven-plugin</artifactId>
          <version>${plugin-versions.version}</version>
          <executions>
            <execution>
              <id>versions</id>
              <phase>test</phase>
              <goals>
                <goal>display-dependency-updates</goal>
                <goal>display-plugin-updates</goal>
              </goals>
            </execution>
          </executions>
        </plugin>

        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>${plugin-exec.version}</version>
          <configuration>
            <mainClass>${mainClass}</mainClass>
          </configuration>
        </plugin>

        <plugin>
            <groupId>com.github.eirslett</groupId>
            <artifactId>frontend-maven-plugin</artifactId>
            <version>${plugin-frontend.version}</version>
            <configuration>
              <nodeVersion>${node.version}</nodeVersion>
            </configuration>
        </plugin>

      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>versions-maven-plugin</artifactId>
      </plugin>
    </plugins>
  </build>
</project>
